--- a/src/style/components/cadastro.css
+++ b/src/style/components/cadastro.css
@@ -1,165 +1,297 @@
-.container-geral {
+.cadastro-content {
   display: flex;
-  background-color: rgb(0, 0, 0);
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh; /* Muda para min-height para permitir expansão */
+  background-color: #141414;
 }
 
-.cadastro-left-section{
-padding: 5px;
-width: 18%;
-height: 50%;
-overflow: hidden;
-display: flex;
-position: relative;
+.cadastro-horizontal-align {
+  display: flex;
+  width: 100%;
 }
 
-.cagastro-left-section img {
-
-width: 1366px;
-height: 997px;
-
-} 
-
-.cadastro-logo{
-margin: 10%;
-margin-left: 15%;
-position: absolute;
-flex-direction: column;
-width: 133px;
-height: 29px;
-flex-shrink: 0;
+.cadastro-left-section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #141414;
+  width: 30%;
+  height: 100vh; /* Mantém a altura fixa para o banner */
+  background-image: url('../../assets/images/img_banner_principal.svg');
+  background-repeat: repeat-y; /* Repete a imagem verticalmente */
+  background-size: cover; /* Cobrir todo o espaço, mesmo quando repetida */
 }
 
-
-.right-section {
- width: 82%;
- height: 100%;
- margin-left: 10%;
- padding:0px;
- position: relative;
+.cadastro-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  pointer-events: none; /* Permite clicar através do overlay */
 }
 
+.cadastro-left-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
+}
 
-.cadastro-title-login {
-  color: #F0EFEF;
-  font-family: Roboto;
-  font-size: 100%;
-  font-style: normal;
+.cadastro-logo {
+  position: absolute;
+  top: 2rem;
+  left: 30%;
+  width: 9rem;
+  height: auto;
+}
+
+.cadastro-logo img {
+  width: 100%;
+  height: auto;
+}
+
+.cadastro-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Alinha os itens ao topo */
+  justify-content: center;
+  width: 70%;
+  padding: 0 7.73935rem; /* Adiciona padding para espaçamento interno */
+  flex-direction: column;
+  background-color: #050507;
+}
+
+.cadastro-wrapper h1 {
+  color: #e2e2e2;
+  font-size: 2.5rem;
   font-weight: 700;
-  letter-spacing: -0.4px;
-  line-height: 16px;  
+  line-height: 1;
+  letter-spacing: -0.025rem;
+  margin-bottom: 2rem;
 }
 
-.title-personal-info{
- color: #F0EFEF;
- font-family: Roboto;
- font-size: 60%;
- font-style: normal;
- font-weight: 700;
- line-height: 16px;
- letter-spacing: -0.4px;
- }
-
-.label-nome-completo {
-color: #FFF;
-font-family: Roboto;
-font-size: 10px;
-font-style: normal;
-font-weight: 500;
-line-height: 100%;
-letter-spacing: -0.266px;
-width: 99.829px;
-    
-}
-.rectangle-97{
-width: 900px;
-height: 30px;
-flex-shrink: 0;
-background: #131117;
-border-radius: 8px;
-border: 1px solid #7C38C0;
+.cadastro-inputs {
+  width: 100%;
+  margin-bottom: 40px;
 }
 
-.
-.rectangle-95{
-    
-width: 150px;
-height: 40px;
-flex-shrink: 0;
-background: #131117;
-border-radius: 25px;
-border: 1px solid #7C38C0;
+.cadastro-inputs .subtitle {
+  display: flex;
+  align-items: center;
+  padding-bottom: 2rem;
 }
 
-/* Estilo do contêiner que segura os chips */
-.container95 {
-display: flex;
-flex-wrap: wrap; 
-gap: 10%; /* Espaçamento entre os chips */
-padding: 20px; /* Espaçamento interno do contêiner */
-max-width: 800px; /* Largura máxima do contêiner */
-border-radius: 15px; /* Bordas arredondadas no contêiner */
-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+.cadastro-inputs .subtitle::before {
+  content: '1'; /* Número dentro do círculo */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.125rem; /* Mesma altura da fonte do h2 */
+  height: 1.125rem; /* Mesma altura da fonte do h2 */
+  border-radius: 50%;
+  background-color: #ffffff;
+  color: #141414;
+  font-size: 1.125rem; /* Mesma altura da fonte do h2 */
+  font-weight: 700;
+  line-height: 1rem;
+  margin-right: 0.5rem; /* Espaçamento entre o círculo e o texto */
 }
 
-/* Estilo dos chips */
+.cadastro-inputs h2 {
+  color: #f0efef;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1rem;
+  letter-spacing: -0.18px;
+  margin: 0;
+}
+
+.cadastro-inputs label {
+  display: block;
+  color: #ffffff;
+  font-size: 0.85rem;
+  margin-bottom: 0.3rem;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: -0.266px;
+}
+
+.cadastro-inputs input {
+  width: 70%;
+  padding: 0.75rem;
+  padding-right: 2.5rem; /* Espaço para o ícone */
+  border: none;
+  font-size: 1rem;
+  border-radius: 12px;
+  background: var(--darker-color2);
+  color: var(--white-color) !important;
+}
+
+.cadastro-inputs input::placeholder {
+  color: #acadb3;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: -0.304px;
+}
+
+.cadastro-inputs .icon {
+  position: absolute;
+  right: 0.75rem;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Evita interferência no clique do input */
+}
+
+.cadastro-inputs .cadastro-group,
+.cadastro-inputs .input-group {
+  margin-bottom: 0.875rem; /* Espaço entre os inputs */
+}
+
+/* Remover margem inferior do último input */
+.cadastro-inputs .cadastro-group:last-child,
+.cadastro-inputs .input-group:last-child {
+  margin-bottom: 0;
+}
+
+.cadastro-inputs .cadastro:focus,
+.cadastro-inputs input:hover {
+  border: 1px solid var(--primary-color-variant1);
+  outline: none;
+  color: var(--white-color) !important;
+}
+
+.input-group {
+  position: relative;
+  margin-bottom: 1.5rem; /* Espaçamento entre os grupos de entrada */
+}
+
+.input-icon-wrapper {
+  position: relative;
+}
+
+.input-icon-wrapper .icon {
+  position: absolute;
+  top: 50%;
+  right: 16px; /* Espaço à direita do input para o ícone */
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+}
+
+.cadastro-preferences {
+  width: 100%;
+  margin-top: 40px; /* Espaço de 40px entre cadastro-inputs e cadastro-preferencias */
+  margin-bottom: 80px; /* Espaço entre as preferências e o footer */
+}
+
+.cadastro-preferences .subtitle {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+
+.cadastro-preferences .subtitle::before {
+  content: '2'; /* Número dentro do círculo */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.125rem; /* Mesma altura da fonte do h2 */
+  height: 1.125rem; /* Mesma altura da fonte do h2 */
+  border-radius: 50%;
+  background-color: #ffffff;
+  color: #141414;
+  font-size: 1.125rem; /* Mesma altura da fonte do h2 */
+  font-weight: 700;
+  line-height: 1rem;
+  margin-right: 0.5rem; /* Espaçamento entre o círculo e o texto */
+}
+
+.cadastro-preferences .subtitle h2 {
+  color: #f0efef;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1rem;
+  letter-spacing: -0.18px;
+  margin: 0;
+}
+
+.cadastro-buttons-group {
+  margin-top: 0.5rem;
+}
+
+.cadastro-chip-group {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 10px;
+}
+
 .chip {
   background-color: #131117; /* Cor de fundo do chip */
-  border: 1px solid #6100C2;
-  border-radius: 25px; /* Borda arredondada */
-  padding: 10px 20px; /* Espaçamento interno */
+  border: 1px solid #6100c2;
+  border-radius: 18px;
+  padding: 4px 10px; /* Espaçamento interno */
   color: white; /* Cor do texto */
-  font-size: 10px; /* Tamanho da fonte */
+  font-size: 12px; /* Tamanho da fonte */
   cursor: pointer; /* Cursor de mãozinha */
   display: flex;
   align-items: center;
-  transition: background-color 0.10s; /* Transição suave ao passar o mouse */
+  transition: background-color 0.1s; /* Transição suave ao passar o mouse */
+  white-space: nowrap;
 }
 
-/* Estilo ao passar o mouse por cima do chip */
-.chip:hover {
-  background-color: #1c1e20; /* Cor de fundo mais escura */
-  cursor: pointer;
-
-}
-
-/* Estilo do texto dentro do chip */
-.chip p {
-  margin: 0; /* Remove margens internas do parágrafo */
-  padding: 0; /* Remove espaçamento interno */
-}
-
-.chip.active {
-  background-color: ;
-  color: white;
-}
-
-
-.container95 {
+.cadastro-footer {
   display: flex;
-  gap: 500px;
-  gap: 10px 40px; /* row-gap column gap */
-  row-gap: 10px;
-  column-gap: 30px;
-  flex-flow: wrap;  
+  flex-direction: column;
+  align-items: center;
+  width: 100%; /* Mesma largura do cadastro-wrapper */
+  background-color: #050507; /* Mantém a cor de fundo */
+  padding: 3rem 7.3795rem; /* Adiciona o padding desejado */
 }
 
-.cadastro-salvar {
-color: #F2EFEF;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-letter-spacing: -0.16px;
-line-height: 24px;
-letter-spacing: -0.16px;
-margin-left: 300px;
+.cadastro-footer a {
+  color: #ffffff;
+  text-decoration: none;
+  margin-bottom: 1rem;
+  display: inline-block;
 }
 
-.cadastro-rectangle-footer {
-width: 260px;
-height: 46px;
-flex-shrink: 0;
-border-radius: 8px;
-background: #6100C2;
-margin-left: 250px;
+.cadastro-footer .cadastro-btn {
+  width: 360px;
+  height: 56px;
+  background-color: var(--primary-color);
+  border: none;
+  color: #ffffff;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 12px;
+  cursor: pointer;
+  margin-bottom: 1rem; /* Espaço abaixo do botão */
+}
+
+.cadastro-footer .cadastro-signup-text {
+  color: #ffffff;
+  margin-top: 1rem;
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: -0.14px;
+}
+
+.cadastro-footer .cadastro-signup-link {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 16px;
+  letter-spacing: -0.14px;
 }
